# Voice-Agent-Appointment-Scheduler

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: mock_calendar.json  topics.json
src/: __init__.py
src/config/: __init__.py  env.py  settings.py
src/llm/: __init__.py
src/mcp/: __init__.py  calendar_mcp.py  gmail_mcp.py  sheets_mcp.py
src/routes/: __init__.py  app.py
src/routes/components/: __init__.py
src/services/: __init__.py  actions.py  booking_code.py  conversation_engine.py  intent_classifier.py  slot_manager.py
src/utils/: __init__.py
src/voice/: __init__.py  stt.py  tts.py
tests/: conftest.py  test_actions.py  test_conversation_engine.py  test_intent_classifier.py  test_slot_manager.py
